--- a/package.json
+++ b/package.json
@@ -9,9 +9,20 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "element-ui": "^2.4.9",
+    "jsdom": "^13.0.0",
+    "location": "0.0.1",
+    "mint-ui": "^2.2.13",
+    "moment": "^2.22.2",
+    "navigator": "^1.0.1",
+    "node-sass": "^4.9.4",
+    "qrcodejs2": "0.0.2",
+    "sass-loader": "^7.1.0",
     "vue": "^2.5.17",
+    "vue-axios": "^2.1.4",
     "vue-router": "^3.0.1",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "xmlhttprequest": "^1.8.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.1.1",
