--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "qrcodejs2": "0.0.2",
     "sass-loader": "^7.1.0",
     "vue": "^2.5.17",
+    "vue-Handsontable": "latest",
     "vue-axios": "^2.1.4",
+    "vue-i18n": "^8.3.2",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1",
     "xmlhttprequest": "^1.8.0"
