--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "element-ui": "^2.4.9",
+    "handsontable": "^6.2.0",
     "jsdom": "^13.0.0",
     "location": "0.0.1",
     "mint-ui": "^2.2.13",
@@ -19,7 +20,6 @@
     "qrcodejs2": "0.0.2",
     "sass-loader": "^7.1.0",
     "vue": "^2.5.17",
-    "vue-Handsontable": "latest",
     "vue-axios": "^2.1.4",
     "vue-i18n": "^8.3.2",
     "vue-router": "^3.0.1",
