--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "node-sass": "^4.9.4",
     "qrcodejs2": "0.0.2",
     "sass-loader": "^7.1.0",
+    "vant": "^1.4.5",
     "vue": "^2.5.17",
     "vue-axios": "^2.1.4",
     "vue-i18n": "^8.3.2",
