--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "element-ui": "^2.4.9",
     "handsontable": "^6.2.0",
     "jsdom": "^13.0.0",
+    "lib-flexible": "^0.3.2",
     "location": "0.0.1",
     "mint-ui": "^2.2.13",
     "moment": "^2.22.2",
     "navigator": "^1.0.1",
     "node-sass": "^4.9.4",
+    "postcss-px2rem": "^0.3.0",
     "qrcodejs2": "0.0.2",
     "sass-loader": "^7.1.0",
     "vant": "^1.4.5",
